# k9t

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/k9t/: Cargo.toml  sample-config.yaml
crates/k9t-app/: Cargo.toml
crates/k9t-app/src/: app.rs  command.rs  config.rs  event.rs  lib.rs  mode.rs
crates/k9t-core/: Cargo.toml
crates/k9t-core/src/: actions.rs  client.rs  describe.rs  lib.rs  logs.rs  namespace.rs  port_forward.rs  reflector.rs  resource.rs  shell.rs
crates/k9t-ui/: Cargo.toml
crates/k9t-ui/src/: layout.rs  layout_cache.rs  lib.rs  smooth.rs  theme.rs  widgets.rs
crates/k9t-ui/src/widgets/: command_palette.rs  confirm_dialog.rs  container_actions.rs  container_picker.rs  context_picker.rs  footer.rs  header.rs  namespace_bar.rs  namespace_picker.rs  resource_table.rs  toast.rs
crates/k9t/src/: main.rs
