[workspace]
members = [
    "crates/k9t",
    "crates/k9t-core",
    "crates/k9t-app",
    "crates/k9t-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
ratatui = "0.30"
ratatui-crossterm = "0.1"
crossterm = "0.29"
tokio = "1.51"
kube = { version = "3.1", features = ["client", "runtime", "derive", "ws"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
toml = "0.8"
jiff = "0.2"
futures = "0.3"
unicode-width = "0.2"
regex = "1"