[package]
name = "k9t-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
k9t-core = { path = "../k9t-core" }
crossterm = { workspace = true, features = ["event-stream"] }
regex = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }